--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ button:active {
 	background-color: #304C62;
 }
 
+.button_active {
+  background-color: #20303D;
+}
+
 button.color1 {
 	border-bottom: 8px solid #ED6500;
 }
@@ -88,26 +92,26 @@ button.file-list {
 
 .distbutton_top {
   border: 3px solid #fff;
-  border-bottom: 0px;
-  border-top-right-radius: 15px;
+  border-right: 0px;
   border-top-left-radius: 15px;
-  margin-bottom: 0px;
+  border-bottom-left-radius: 15px;
+  margin-right: 0px;
 }
 
 .distbutton {
   border: 3px solid #fff;
-  border-top: 3px solid #ccc;
-  border-bottom: 0px;
-  margin-top: 0;
-  margin-bottom: 0px;
+  border-left: 3px solid #ccc;
+  border-right: 0px;
+  margin-left: 0;
+  margin-right: 0px;
 }
 
 .distbutton_bottom {
   border: 3px solid #fff;
-  border-top: 3px solid #ccc;
-  border-bottom-right-radius: 20px;
-  border-bottom-left-radius: 20px;
-  margin-top: 0;
+  border-left: 3px solid #ccc;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  margin-left: 0;
 }
 
 .distbutton_active {
@@ -191,4 +195,88 @@ button.keyboard {
 
 .hidden {
     opacity: 0;
+}
+
+
+
+
+
+.temperature_entry {
+  border: 0px;
+  color: #fff;
+  margin: 10px 5px 5px 5px;
+}
+
+.numpad_tleft {
+  border-left: 3px solid #fff;
+  border-top: 3px solid #fff;
+  border-top-left-radius: 15px;
+  margin: 3px 0 0 3px;
+}
+
+.numpad_top {
+  border-left: 3px solid #ccc;
+  border-top: 3px solid #fff;
+  margin: 3px 0 0 0;
+}
+
+.numpad_tright {
+  border-left: 3px solid #fff;
+  border-right: 3px solid #fff;
+  border-top: 3px solid #fff;
+  border-top-right-radius: 15px;
+  margin: 3px 3px 0 0;
+}
+
+.numpad_left {
+  border-left: 3px solid #fff;
+  border-top: 3px solid #ccc;
+  margin: 0 0 0 3px;
+}
+
+.numpad_button {
+  border-left: 3px solid #ccc;
+  border-top: 3px solid #ccc;
+  margin: 0;
+}
+
+.numpad_right {
+  border-right: 3px solid #fff;
+  border-left: 3px solid #ccc;
+  border-top: 3px solid #ccc;
+  margin: 0 3px 0 0;
+}
+
+.numpad_bleft {
+  border-left: 3px solid #fff;
+  border-bottom: 3px solid #fff;
+  border-top: 3px solid #ccc;
+  border-bottom-left-radius: 15px;
+  margin: 0 0 3px 3px;
+}
+
+.numpad_bottom {
+  border-left: 3px solid #ccc;
+  border-bottom: 3px solid #fff;
+  border-top: 3px solid #ccc;
+  margin: 0 0 3px 0;
+}
+
+.numpad_bright {
+  border-left: 3px solid #ccc;
+  border-bottom: 3px solid #fff;
+  border-top: 3px solid #ccc;
+  border-right: 3px solid #ccc;
+  border-bottom-right-radius: 15px;
+  margin: 0 3px 3px 0;
+}
+
+.fan_slider {
+  margin: 20px;
+  color: #fff;
+}
+
+scale mark {
+  margin-top: 20px;
+  color: #fff;
 }
