--- a/style.css
+++ b/style.css
@@ -8,27 +8,36 @@ window {
 	font-size: 20px;
 }
 
-scrollbar, scrollbar button {
+scrollbar, scrollbar button, scrollbar trough {
 	border: none;
 	background-color: #13181C;
 }
 
 scrollbar slider {
-	min-width: 88px;
+	min-width: 60px;
 	border-radius: 15px;
 	background-color: #404E57;
 }
 
+frame {
+    color: #fff;
+    border-bottom: 1px solid #444;
+}
+
+.text {
+    color: #fff;
+}
+
 progress, trough {
 	min-height: 40px;
-	font-size: 50px;
-  background-color: #404E57;
-  color: #404E57;
-  border: #000 1px solid;
+	/*font-size: 50px;*/
+    background-color: #404E57;
+    color: #fff;
+    border: #000 1px solid;
 }
 
 progress {
-	background-color: #00C9B4;
+	background-color: #d47b00;
 	font-size: 50px;
 	font-weight: lighter;
 }
@@ -38,9 +47,9 @@ progress {
 	color: #00C9B4;
 }
 
-.printing-progress-bar text {
+.printing-progress-text {
 	font-size: 25px;
-	color: #404e57;
+	color: #fff;
 }
 
 .printing-state {
@@ -53,8 +62,8 @@ button {
 	margin: 5px;
 	margin-bottom: 10px;
 	border-radius: 0;
-  border: 0px solid #000;
-  color: #fff;
+    border: 0px solid #000;
+    color: #fff;
 	-gtk-icon-shadow: none;
 }
 
@@ -162,18 +171,7 @@ button.keyboard {
 	font-size: 20px;
 	padding: 50px;
 	background-color: #000;
-}
-
-.dialog button {
-	padding: 30px 50px 30px 50px;
-	border-bottom: 8px solid #009384;
-}
-
-.dialog {
-	border: 2px solid black;
-	font-size: 20px;
-	padding: 50px;
-	background-color: #000;
+    margin: 20px;
 }
 
 .dialog button {
@@ -213,16 +211,13 @@ button.keyboard {
 .printing-status-label {
 	padding-top: 5px;
 	padding-bottom: 3px;
-  color: #ccc;
+    color: #ccc;
 	font-size: 24px;
 }
 
 .hidden {
     opacity: 0;
 }
-
-
-
 
 
 .temperature_entry {
